--- a/EmployeeManagement/views/Template/index.ejs
+++ b/EmployeeManagement/views/Template/index.ejs
@@ -38,5 +38,10 @@ input{
         <input type="text", id="msg" placeholder="Enter Mesage"><br><br>
         <button type="submit">Send</button>
     </div>
+    <div>
+        <img src="">
+    </div>
 </body>
+
+
 </html>
